@startuml

hide empty members

class Waitress{
    Menu pancakeHouseMenu
    Menu dinerMenu
    Menu cafeMenu
    printMenu(self, iterator=None)
}

class Menu{
    {abstract} __iter__(self)
}

class CafeMenu{
    addItem(self, name, description, vegetarian, price)
}

class DinerMenu{
    addItem(self, name, description, vegetarian, price)
}

class PancakeHouseMenu{
    addItem(self, name, description, vegetarian, price)
}

class MenuItem{
    str name
    str description
    bool vegetarian
    float price
}

Menu <|-- CafeMenu
Menu <|-- DinerMenu
Menu <|-- PancakeHouseMenu

Waitress *-- CafeMenu
Waitress *-- DinerMenu
Waitress *-- PancakeHouseMenu

CafeMenu o-- MenuItem
DinerMenu o-- MenuItem
PancakeHouseMenu o-- MenuItem

@enduml